--- a/LapCatCounter/LapCatCounter.csproj
+++ b/LapCatCounter/LapCatCounter.csproj
@@ -8,6 +8,7 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<Version>1.0.19.0</Version>
 	<ProduceReferenceAssembly>false</ProduceReferenceAssembly>
+	<GenerateDependencyFile>false</GenerateDependencyFile>
   </PropertyGroup>
 
   <ItemGroup>
